Persistance of favorite cameras changed from a set into a sting